src/net/uri.rl.cc

#line 1 "/programs/nemo/src/net/uri.rl"
#include "net/uri.h"

#include <sstream>

#include "common/lexical_cast.h"

namespace nemo {
namespace net {

#line 13 "/programs/nemo/src/net/uri.rl.cc"
static const int uri_parser_start = 451;
static const int uri_parser_first_final = 451;
static const int uri_parser_error = 0;

static const int uri_parser_en_main = 451;


#line 131 "/programs/nemo/src/net/uri.rl"


Uri::UniquePtr Uri::Create(StringArg uriStr) {
    Uri::UniquePtr uri = std::make_unique<Uri>();
    int cs = 0;
    const char* mark = 0;
    
#line 29 "/programs/nemo/src/net/uri.rl.cc"
	{
	cs = uri_parser_start;
	}

#line 138 "/programs/nemo/src/net/uri.rl"
    const char *p = uriStr.data();
    const char *pe = p + uriStr.size();
    const char* eof = pe;
    
#line 39 "/programs/nemo/src/net/uri.rl.cc"
	{
	if ( p == pe )
		goto _test_eof;
	switch ( cs )
	{
case 451:
	switch( (*p) ) {
		case 34: goto st0;
		case 35: goto st453;
		case 37: goto st3;
		case 47: goto st458;
		case 58: goto st0;
		case 60: goto st0;
		case 62: goto st0;
		case 63: goto st456;
		case 96: goto st0;
		case 127: goto st0;
	}
	if ( (*p) < 91 ) {
		if ( (*p) > 32 ) {
			if ( 65 <= (*p) && (*p) <= 90 )
				goto tr461;
		} else if ( (*p) >= 0 )
			goto st0;
	} else if ( (*p) > 94 ) {
		if ( (*p) > 122 ) {
			if ( 123 <= (*p) && (*p) <= 125 )
				goto st0;
		} else if ( (*p) >= 97 )
			goto tr461;
	} else
		goto st0;
	goto st452;
st452:
	if ( ++p == pe )
		goto _test_eof452;
case 452:
	switch( (*p) ) {
		case 34: goto st0;
		case 35: goto st453;
		case 37: goto st3;
		case 47: goto st455;
		case 58: goto st0;
		case 60: goto st0;
		case 62: goto st0;
		case 63: goto st456;
		case 96: goto st0;
		case 127: goto st0;
	}
	if ( (*p) < 91 ) {
		if ( 0 <= (*p) && (*p) <= 32 )
			goto st0;
	} else if ( (*p) > 94 ) {
		if ( 123 <= (*p) && (*p) <= 125 )
			goto st0;
	} else
		goto st0;
	goto st452;
st0:
cs = 0;
	goto _out;
tr467:
#line 20 "/programs/nemo/src/net/uri.rl"
	{ mark = p; }
#line 105 "/programs/nemo/src/net/uri.rl"
	{
        uri->setQuery(StringArg(mark, p - mark));
        mark = NULL;
    }
	goto st453;
tr469:
#line 105 "/programs/nemo/src/net/uri.rl"
	{
        uri->setQuery(StringArg(mark, p - mark));
        mark = NULL;
    }
	goto st453;
tr474:
#line 21 "/programs/nemo/src/net/uri.rl"
	{ mark = p; }
#line 46 "/programs/nemo/src/net/uri.rl"
	{
        if (mark != NULL) {
            uri->setHost(StringArg(mark, p - mark));
        }
    }
	goto st453;
tr485:
#line 46 "/programs/nemo/src/net/uri.rl"
	{
        if (mark != NULL) {
            uri->setHost(StringArg(mark, p - mark));
        }
    }
	goto st453;
tr489:
#line 21 "/programs/nemo/src/net/uri.rl"
	{ mark = p; }
#line 32 "/programs/nemo/src/net/uri.rl"
	{
        if (p != mark) {
            uri->setPort(LexicalCast<uint16_t>(mark));
        }
        mark = NULL;
    }
	goto st453;
tr493:
#line 32 "/programs/nemo/src/net/uri.rl"
	{
        if (p != mark) {
            uri->setPort(LexicalCast<uint16_t>(mark));
        }
        mark = NULL;
    }
	goto st453;
tr548:
#line 21 "/programs/nemo/src/net/uri.rl"
	{ mark = p; }
#line 46 "/programs/nemo/src/net/uri.rl"
	{
        if (mark != NULL) {
            uri->setHost(StringArg(mark, p - mark));
        }
    }
#line 80 "/programs/nemo/src/net/uri.rl"
	{
        uri->setPath(StringArg(mark, p - mark));
        mark = NULL;
    }
	goto st453;
tr559:
#line 46 "/programs/nemo/src/net/uri.rl"
	{
        if (mark != NULL) {
            uri->setHost(StringArg(mark, p - mark));
        }
    }
#line 21 "/programs/nemo/src/net/uri.rl"
	{ mark = p; }
#line 80 "/programs/nemo/src/net/uri.rl"
	{
        uri->setPath(StringArg(mark, p - mark));
        mark = NULL;
    }
	goto st453;
tr563:
#line 80 "/programs/nemo/src/net/uri.rl"
	{
        uri->setPath(StringArg(mark, p - mark));
        mark = NULL;
    }
	goto st453;
tr566:
#line 21 "/programs/nemo/src/net/uri.rl"
	{ mark = p; }
#line 32 "/programs/nemo/src/net/uri.rl"
	{
        if (p != mark) {
            uri->setPort(LexicalCast<uint16_t>(mark));
        }
        mark = NULL;
    }
#line 80 "/programs/nemo/src/net/uri.rl"
	{
        uri->setPath(StringArg(mark, p - mark));
        mark = NULL;
    }
	goto st453;
tr570:
#line 32 "/programs/nemo/src/net/uri.rl"
	{
        if (p != mark) {
            uri->setPort(LexicalCast<uint16_t>(mark));
        }
        mark = NULL;
    }
#line 21 "/programs/nemo/src/net/uri.rl"
	{ mark = p; }
#line 80 "/programs/nemo/src/net/uri.rl"
	{
        uri->setPath(StringArg(mark, p - mark));
        mark = NULL;
    }
	goto st453;
st453:
	if ( ++p == pe )
		goto _test_eof453;
case 453:
#line 228 "/programs/nemo/src/net/uri.rl.cc"
	switch( (*p) ) {
		case 37: goto tr463;
		case 60: goto st0;
		case 62: goto st0;
		case 96: goto st0;
		case 127: goto st0;
	}
	if ( (*p) < 34 ) {
		if ( 0 <= (*p) && (*p) <= 32 )
			goto st0;
	} else if ( (*p) > 35 ) {
		if ( (*p) > 94 ) {
			if ( 123 <= (*p) && (*p) <= 125 )
				goto st0;
		} else if ( (*p) >= 91 )
			goto st0;
	} else
		goto st0;
	goto tr462;
tr462:
#line 20 "/programs/nemo/src/net/uri.rl"
	{ mark = p; }
	goto st454;
st454:
	if ( ++p == pe )
		goto _test_eof454;
case 454:
#line 256 "/programs/nemo/src/net/uri.rl.cc"
	switch( (*p) ) {
		case 37: goto st1;
		case 60: goto st0;
		case 62: goto st0;
		case 96: goto st0;
		case 127: goto st0;
	}
	if ( (*p) < 34 ) {
		if ( 0 <= (*p) && (*p) <= 32 )
			goto st0;
	} else if ( (*p) > 35 ) {
		if ( (*p) > 94 ) {
			if ( 123 <= (*p) && (*p) <= 125 )
				goto st0;
		} else if ( (*p) >= 91 )
			goto st0;
	} else
		goto st0;
	goto st454;
tr463:
#line 20 "/programs/nemo/src/net/uri.rl"
	{ mark = p; }
	goto st1;
st1:
	if ( ++p == pe )
		goto _test_eof1;
case 1:
#line 284 "/programs/nemo/src/net/uri.rl.cc"
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st2;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st2;
	} else
		goto st2;
	goto st0;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st454;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st454;
	} else
		goto st454;
	goto st0;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st4;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st4;
	} else
		goto st4;
	goto st0;
st4:
	if ( ++p == pe )
		goto _test_eof4;
case 4:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st452;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st452;
	} else
		goto st452;
	goto st0;
tr476:
#line 21 "/programs/nemo/src/net/uri.rl"
	{ mark = p; }
#line 46 "/programs/nemo/src/net/uri.rl"
	{
        if (mark != NULL) {
            uri->setHost(StringArg(mark, p - mark));
        }
    }
	goto st455;
tr486:
#line 46 "/programs/nemo/src/net/uri.rl"
	{
        if (mark != NULL) {
            uri->setHost(StringArg(mark, p - mark));
        }
    }
	goto st455;
tr490:
#line 21 "/programs/nemo/src/net/uri.rl"
	{ mark = p; }
#line 32 "/programs/nemo/src/net/uri.rl"
	{
        if (p != mark) {
            uri->setPort(LexicalCast<uint16_t>(mark));
        }
        mark = NULL;
    }
	goto st455;
tr494:
#line 32 "/programs/nemo/src/net/uri.rl"
	{
        if (p != mark) {
            uri->setPort(LexicalCast<uint16_t>(mark));
        }
        mark = NULL;
    }
	goto st455;
st455:
	if ( ++p == pe )
		goto _test_eof455;
case 455:
#line 375 "/programs/nemo/src/net/uri.rl.cc"
	switch( (*p) ) {
		case 34: goto st0;
		case 35: goto st453;
		case 37: goto st5;
		case 60: goto st0;
		case 62: goto st0;
		case 63: goto st456;
		case 96: goto st0;
		case 127: goto st0;
	}
	if ( (*p) < 91 ) {
		if ( 0 <= (*p) && (*p) <= 32 )
			goto st0;
	} else if ( (*p) > 94 ) {
		if ( 123 <= (*p) && (*p) <= 125 )
			goto st0;
	} else
		goto st0;
	goto st455;
st5:
	if ( ++p == pe )
		goto _test_eof5;
case 5:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st6;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st6;
	} else
		goto st6;
	goto st0;
st6:
	if ( ++p == pe )
		goto _test_eof6;
case 6:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st455;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st455;
	} else
		goto st455;
	goto st0;
tr482:
#line 21 "/programs/nemo/src/net/uri.rl"
	{ mark = p; }
#line 46 "/programs/nemo/src/net/uri.rl"
	{
        if (mark != NULL) {
            uri->setHost(StringArg(mark, p - mark));
        }
    }
	goto st456;
tr488:
#line 46 "/programs/nemo/src/net/uri.rl"
	{
        if (mark != NULL) {
            uri->setHost(StringArg(mark, p - mark));
        }
    }
	goto st456;
tr492:
#line 21 "/programs/nemo/src/net/uri.rl"
	{ mark = p; }
#line 32 "/programs/nemo/src/net/uri.rl"
	{
        if (p != mark) {
            uri->setPort(LexicalCast<uint16_t>(mark));
        }
        mark = NULL;
    }
	goto st456;
tr496:
#line 32 "/programs/nemo/src/net/uri.rl"
	{
        if (p != mark) {
            uri->setPort(LexicalCast<uint16_t>(mark));
        }
        mark = NULL;
    }
	goto st456;
tr556:
#line 21 "/programs/nemo/src/net/uri.rl"
	{ mark = p; }
#line 46 "/programs/nemo/src/net/uri.rl"
	{
        if (mark != NULL) {
            uri->setHost(StringArg(mark, p - mark));
        }
    }
#line 80 "/programs/nemo/src/net/uri.rl"
	{
        uri->setPath(StringArg(mark, p - mark));
        mark = NULL;
    }
	goto st456;
tr562:
#line 46 "/programs/nemo/src/net/uri.rl"
	{
        if (mark != NULL) {
            uri->setHost(StringArg(mark, p - mark));
        }
    }
#line 21 "/programs/nemo/src/net/uri.rl"
	{ mark = p; }
#line 80 "/programs/nemo/src/net/uri.rl"
	{
        uri->setPath(StringArg(mark, p - mark));
        mark = NULL;
    }
	goto st456;
tr565:
#line 80 "/programs/nemo/src/net/uri.rl"
	{
        uri->setPath(StringArg(mark, p - mark));
        mark = NULL;
    }
	goto st456;
tr569:
#line 21 "/programs/nemo/src/net/uri.rl"
	{ mark = p; }
#line 32 "/programs/nemo/src/net/uri.rl"
	{
        if (p != mark) {
            uri->setPort(LexicalCast<uint16_t>(mark));
        }
        mark = NULL;
    }
#line 80 "/programs/nemo/src/net/uri.rl"
	{
        uri->setPath(StringArg(mark, p - mark));
        mark = NULL;
    }
	goto st456;
tr573:
#line 32 "/programs/nemo/src/net/uri.rl"
	{
        if (p != mark) {
            uri->setPort(LexicalCast<uint16_t>(mark));
        }
        mark = NULL;
    }
#line 21 "/programs/nemo/src/net/uri.rl"
	{ mark = p; }
#line 80 "/programs/nemo/src/net/uri.rl"
	{
        uri->setPath(StringArg(mark, p - mark));
        mark = NULL;
    }
	goto st456;
st456:
	if ( ++p == pe )
		goto _test_eof456;
case 456:
#line 532 "/programs/nemo/src/net/uri.rl.cc"
	switch( (*p) ) {
		case 34: goto st0;
		case 35: goto tr467;
		case 37: goto tr468;
		case 60: goto st0;
		case 62: goto st0;
		case 96: goto st0;
		case 127: goto st0;
	}
	if ( (*p) < 91 ) {
		if ( 0 <= (*p) && (*p) <= 32 )
			goto st0;
	} else if ( (*p) > 94 ) {
		if ( 123 <= (*p) && (*p) <= 125 )
			goto st0;
	} else
		goto st0;
	goto tr466;
tr466:
#line 20 "/programs/nemo/src/net/uri.rl"
	{ mark = p; }
	goto st457;
st457:
	if ( ++p == pe )
		goto _test_eof457;
case 457:
#line 559 "/programs/nemo/src/net/uri.rl.cc"
	switch( (*p) ) {
		case 34: goto st0;
		case 35: goto tr469;
		case 37: goto st7;
		case 60: goto st0;
		case 62: goto st0;
		case 96: goto st0;
		case 127: goto st0;
	}
	if ( (*p) < 91 ) {
		if ( 0 <= (*p) && (*p) <= 32 )
			goto st0;
	} else if ( (*p) > 94 ) {
		if ( 123 <= (*p) && (*p) <= 125 )
			goto st0;
	} else
		goto st0;
	goto st457;
tr468:
#line 20 "/programs/nemo/src/net/uri.rl"
	{ mark = p; }
	goto st7;
st7:
	if ( ++p == pe )
		goto _test_eof7;
case 7:
#line 586 "/programs/nemo/src/net/uri.rl.cc"
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st8;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st8;
	} else
		goto st8;
	goto st0;
st8:
	if ( ++p == pe )
		goto _test_eof8;
case 8:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st457;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st457;
	} else
		goto st457;
	goto st0;
st458:
	if ( ++p == pe )
		goto _test_eof458;
case 458:
	switch( (*p) ) {
		case 34: goto st0;
		case 35: goto st453;
		case 37: goto st5;
		case 47: goto st459;
		case 60: goto st0;
		case 62: goto st0;
		case 63: goto st456;
		case 96: goto st0;
		case 127: goto st0;
	}
	if ( (*p) < 91 ) {
		if ( 0 <= (*p) && (*p) <= 32 )
			goto st0;
	} else if ( (*p) > 94 ) {
		if ( 123 <= (*p) && (*p) <= 125 )
			goto st0;
	} else
		goto st0;
	goto st455;
st459:
	if ( ++p == pe )
		goto _test_eof459;
case 459:
	switch( (*p) ) {
		case 2: goto tr472;
		case 33: goto tr473;
		case 35: goto tr474;
		case 37: goto tr475;
		case 47: goto tr476;
		case 48: goto tr477;
		case 49: goto tr478;
		case 50: goto tr479;
		case 58: goto tr481;
		case 59: goto tr473;
		case 61: goto tr473;
		case 63: goto tr482;
		case 64: goto tr483;
		case 91: goto tr484;
		case 95: goto tr473;
		case 126: goto tr473;
	}
	if ( (*p) < 51 ) {
		if ( 36 <= (*p) && (*p) <= 46 )
			goto tr473;
	} else if ( (*p) > 57 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto tr473;
		} else if ( (*p) >= 65 )
			goto tr473;
	} else
		goto tr480;
	goto st0;
tr472:
#line 21 "/programs/nemo/src/net/uri.rl"
	{ mark = p; }
	goto st9;
st9:
	if ( ++p == pe )
		goto _test_eof9;
case 9:
#line 675 "/programs/nemo/src/net/uri.rl.cc"
	if ( 48 <= (*p) && (*p) <= 52 )
		goto st10;
	goto st0;
st10:
	if ( ++p == pe )
		goto _test_eof10;
case 10:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st11;
	goto st0;
st11:
	if ( ++p == pe )
		goto _test_eof11;
case 11:
	if ( (*p) == 46 )
		goto st12;
	goto st0;
st12:
	if ( ++p == pe )
		goto _test_eof12;
case 12:
	switch( (*p) ) {
		case 2: goto st13;
		case 48: goto st15;
		case 49: goto st27;
		case 50: goto st29;
	}
	if ( 51 <= (*p) && (*p) <= 57 )
		goto st28;
	goto st0;
st13:
	if ( ++p == pe )
		goto _test_eof13;
case 13:
	if ( 48 <= (*p) && (*p) <= 52 )
		goto st14;
	goto st0;
st14:
	if ( ++p == pe )
		goto _test_eof14;
case 14:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st15;
	goto st0;
st15:
	if ( ++p == pe )
		goto _test_eof15;
case 15:
	if ( (*p) == 46 )
		goto st16;
	goto st0;
st16:
	if ( ++p == pe )
		goto _test_eof16;
case 16:
	switch( (*p) ) {
		case 2: goto st17;
		case 48: goto st19;
		case 49: goto st23;
		case 50: goto st25;
	}
	if ( 51 <= (*p) && (*p) <= 57 )
		goto st24;
	goto st0;
st17:
	if ( ++p == pe )
		goto _test_eof17;
case 17:
	if ( 48 <= (*p) && (*p) <= 52 )
		goto st18;
	goto st0;
st18:
	if ( ++p == pe )
		goto _test_eof18;
case 18:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st19;
	goto st0;
st19:
	if ( ++p == pe )
		goto _test_eof19;
case 19:
	if ( (*p) == 46 )
		goto st20;
	goto st0;
st20:
	if ( ++p == pe )
		goto _test_eof20;
case 20:
	switch( (*p) ) {
		case 2: goto st21;
		case 48: goto st460;
		case 49: goto st463;
		case 50: goto st465;
	}
	if ( 51 <= (*p) && (*p) <= 57 )
		goto st464;
	goto st0;
st21:
	if ( ++p == pe )
		goto _test_eof21;
case 21:
	if ( 48 <= (*p) && (*p) <= 52 )
		goto st22;
	goto st0;
st22:
	if ( ++p == pe )
		goto _test_eof22;
case 22:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st460;
	goto st0;
st460:
	if ( ++p == pe )
		goto _test_eof460;
case 460:
	switch( (*p) ) {
		case 35: goto tr485;
		case 47: goto tr486;
		case 58: goto tr487;
		case 63: goto tr488;
	}
	goto st0;
tr507:
#line 21 "/programs/nemo/src/net/uri.rl"
	{ mark = p; }
#line 46 "/programs/nemo/src/net/uri.rl"
	{
        if (mark != NULL) {
            uri->setHost(StringArg(mark, p - mark));
        }
    }
	goto st461;
tr487:
#line 46 "/programs/nemo/src/net/uri.rl"
	{
        if (mark != NULL) {
            uri->setHost(StringArg(mark, p - mark));
        }
    }
	goto st461;
st461:
	if ( ++p == pe )
		goto _test_eof461;
case 461:
#line 821 "/programs/nemo/src/net/uri.rl.cc"
	switch( (*p) ) {
		case 35: goto tr489;
		case 47: goto tr490;
		case 63: goto tr492;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr491;
	goto st0;
tr491:
#line 21 "/programs/nemo/src/net/uri.rl"
	{ mark = p; }
	goto st462;
st462:
	if ( ++p == pe )
		goto _test_eof462;
case 462:
#line 838 "/programs/nemo/src/net/uri.rl.cc"
	switch( (*p) ) {
		case 35: goto tr493;
		case 47: goto tr494;
		case 63: goto tr496;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st462;
	goto st0;
st463:
	if ( ++p == pe )
		goto _test_eof463;
case 463:
	switch( (*p) ) {
		case 35: goto tr485;
		case 47: goto tr486;
		case 58: goto tr487;
		case 63: goto tr488;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st464;
	goto st0;
st464:
	if ( ++p == pe )
		goto _test_eof464;
case 464:
	switch( (*p) ) {
		case 35: goto tr485;
		case 47: goto tr486;
		case 58: goto tr487;
		case 63: goto tr488;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st460;
	goto st0;
st465:
	if ( ++p == pe )
		goto _test_eof465;
case 465:
	switch( (*p) ) {
		case 35: goto tr485;
		case 47: goto tr486;
		case 53: goto st466;
		case 58: goto tr487;
		case 63: goto tr488;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st460;
	goto st0;
st466:
	if ( ++p == pe )
		goto _test_eof466;
case 466:
	switch( (*p) ) {
		case 35: goto tr485;
		case 47: goto tr486;
		case 58: goto tr487;
		case 63: goto tr488;
	}
	if ( 48 <= (*p) && (*p) <= 53 )
		goto st460;
	goto st0;
st23:
	if ( ++p == pe )
		goto _test_eof23;
case 23:
	if ( (*p) == 46 )
		goto st20;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st24;
	goto st0;
st24:
	if ( ++p == pe )
		goto _test_eof24;
case 24:
	if ( (*p) == 46 )
		goto st20;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st19;
	goto st0;
st25:
	if ( ++p == pe )
		goto _test_eof25;
case 25:
	switch( (*p) ) {
		case 46: goto st20;
		case 53: goto st26;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st19;
	goto st0;
st26:
	if ( ++p == pe )
		goto _test_eof26;
case 26:
	if ( (*p) == 46 )
		goto st20;
	if ( 48 <= (*p) && (*p) <= 53 )
		goto st19;
	goto st0;
st27:
	if ( ++p == pe )
		goto _test_eof27;
case 27:
	if ( (*p) == 46 )
		goto st16;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st28;
	goto st0;
st28:
	if ( ++p == pe )
		goto _test_eof28;
case 28:
	if ( (*p) == 46 )
		goto st16;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st15;
	goto st0;
st29:
	if ( ++p == pe )
		goto _test_eof29;
case 29:
	switch( (*p) ) {
		case 46: goto st16;
		case 53: goto st30;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st15;
	goto st0;
st30:
	if ( ++p == pe )
		goto _test_eof30;
case 30:
	if ( (*p) == 46 )
		goto st16;
	if ( 48 <= (*p) && (*p) <= 53 )
		goto st15;
	goto st0;
tr473:
#line 21 "/programs/nemo/src/net/uri.rl"
	{ mark = p; }
	goto st467;
st467:
	if ( ++p == pe )
		goto _test_eof467;
case 467:
#line 984 "/programs/nemo/src/net/uri.rl.cc"
	switch( (*p) ) {
		case 33: goto st467;
		case 35: goto tr485;
		case 37: goto st31;
		case 47: goto tr486;
		case 58: goto tr499;
		case 61: goto st467;
		case 63: goto tr488;
		case 64: goto tr38;
		case 95: goto st467;
		case 126: goto st467;
	}
	if ( (*p) < 65 ) {
		if ( 36 <= (*p) && (*p) <= 59 )
			goto st467;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st467;
	} else
		goto st467;
	goto st0;
tr475:
#line 21 "/programs/nemo/src/net/uri.rl"
	{ mark = p; }
	goto st31;
st31:
	if ( ++p == pe )
		goto _test_eof31;
case 31:
#line 1014 "/programs/nemo/src/net/uri.rl.cc"
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st32;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st32;
	} else
		goto st32;
	goto st0;
st32:
	if ( ++p == pe )
		goto _test_eof32;
case 32:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st467;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st467;
	} else
		goto st467;
	goto st0;
tr481:
#line 21 "/programs/nemo/src/net/uri.rl"
	{ mark = p; }
#line 46 "/programs/nemo/src/net/uri.rl"
	{
        if (mark != NULL) {
            uri->setHost(StringArg(mark, p - mark));
        }
    }
	goto st468;
tr499:
#line 46 "/programs/nemo/src/net/uri.rl"
	{
        if (mark != NULL) {
            uri->setHost(StringArg(mark, p - mark));
        }
    }
	goto st468;
st468:
	if ( ++p == pe )
		goto _test_eof468;
case 468:
#line 1059 "/programs/nemo/src/net/uri.rl.cc"
	switch( (*p) ) {
		case 33: goto st33;
		case 35: goto tr489;
		case 37: goto st34;
